--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,17 @@ h3{
 @media (min-width: 1000px) {
 
     /* Header & Hero */
-
+    #hero{
+        margin-left:1em;
+        margin-right:1em;
+        width:90%;
+    }
+    #hero img{
+        width:400px;
+    }
+    #hero div{
+        width:100%;
+    }
     /* Projects */
     #projects .project{
         display:grid;
